--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,14 @@ body{
 }
 nav{
     height: 80px;
+    z-index: 1;
 }
 .carousel-item{
    height: calc(100vh - 80px);
    background-image: url('../images/banner.png');
    background-repeat: no-repeat;
    background-size: cover;
-   background-position: center;
-   
+   background-position: center;   
 }
 .accordion-button:focus {  
     box-shadow: 0 0 0;
@@ -25,6 +25,20 @@ nav{
 }
 .highlight{
     border-radius: 26px;
+}
+#celebrate{
+   height: 70vh;
+   background-image: url('../images/background.png');
+   background-repeat: no-repeat;
+   background-size: cover;
+   background-position: top center;
+   background-color: rgba(0, 0, 0, 0.815);
+   background-blend-mode: overlay;
+}
+.badge{
+    position: relative;
+    top: -58px;
+    right: -220px;
 }
 
     
