--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,33 @@
+/* Google Fonts  */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
 body{
     font-family: 'Poppins', sans-serif;
 }
+
 nav{
     height: 80px;
     z-index: 1;
 }
-.carousel-item{
-   height: calc(100vh - 80px);
-   background-image: url('../images/banner.png');
-   background-repeat: no-repeat;
-   background-size: cover;
-   background-position: center;   
+.carousel-inner img{
+   height: calc(100vh - 80px);  
+   object-fit: cover;
+}
+.carousel-inner{
+    position: relative;
+ }
+.carousel-inner::after{
+    position: absolute;
+    content: " ";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.541);
+    z-index: 0;
+}
+.carousel-caption{
+    z-index: 1;
 }
 .accordion-button:focus {  
     box-shadow: 0 0 0;
@@ -37,6 +52,9 @@ nav{
 }
 .hot{
     left: 85%;  
+}
+.toast-shadow{
+    box-shadow: 30px 20px 25px rgb(204 198 179);
 }
 
     
